# READLOG

./: .gitignore  CLAUDE.md  README.md  index.html  log_structure.md  log_tree.txt  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  crypto.rs  directory.rs  download.rs  error.rs  filter.rs  lib.rs  main.rs  parser.rs  query.rs  search.rs  stream_reader.rs
src/components/: AddServerModal.tsx  DownloadPanel.tsx  FileSelector.tsx  FilterPanel.tsx  LogPathModal.tsx  LogViewer.tsx  SearchPanel.tsx  ServerConfig.tsx  StatusBar.tsx
src/hooks/: useQuery.ts  useQueryProgress.ts
src/lib/: runtime.ts
src/store/: queryStore.ts  serverStore.ts
src/types/: log.ts  query.ts
